feat: add an app to test Angular built-in i18n functionality

--- a/locales/messages.en.xlf
+++ b/locales/messages.en.xlf
@@ -3,9 +3,9 @@
   <file source-language="en" datatype="plaintext" original="ng2.template">
     <body>
       <trans-unit id="introductionHeader" datatype="html">
-        <source>Welcome to i18n!</source>
+        <source>Welcome to i18n-app!</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">apps/i18n/src/app/app.component.html</context>
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
           <context context-type="linenumber">3</context>
         </context-group>
         <note priority="1" from="description">An introduction header for the i18n app</note>
@@ -14,28 +14,28 @@
       <trans-unit id="logoAlternativeText" datatype="html">
         <source>Nx - Smart, Extensible Build Framework</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">apps/i18n/src/app/app.component.html</context>
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
           <context context-type="linenumber">10</context>
         </context-group>
       </trans-unit>
       <trans-unit id="522eda60ff08ea634ef2e8f2c0a36bb06dcd8af9" datatype="html">
         <source>Text without an element</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">apps/i18n/src/app/app.component.html</context>
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
           <context context-type="linenumber">18</context>
         </context-group>
       </trans-unit>
       <trans-unit id="builtInPipesSectionTitle" datatype="html">
         <source>Built-in pipes</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">apps/i18n/src/app/app.component.html</context>
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
           <context context-type="linenumber">23</context>
         </context-group>
       </trans-unit>
       <trans-unit id="dateLabel" datatype="html">
         <source>Date</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">apps/i18n/src/app/app.component.html</context>
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
           <context context-type="linenumber">26</context>
         </context-group>
         <note priority="1" from="description">Date label</note>
@@ -43,7 +43,7 @@
       <trans-unit id="timeLabel" datatype="html">
         <source>Time</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">apps/i18n/src/app/app.component.html</context>
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
           <context context-type="linenumber">30</context>
         </context-group>
         <note priority="1" from="description">Time label</note>
@@ -51,7 +51,7 @@
       <trans-unit id="currencyLabel" datatype="html">
         <source>Currency</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">apps/i18n/src/app/app.component.html</context>
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
           <context context-type="linenumber">34</context>
         </context-group>
         <note priority="1" from="description">Currency label</note>
@@ -59,33 +59,82 @@
       <trans-unit id="feedbackFormTitle" datatype="html">
         <source>Feedback form</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">apps/i18n/src/app/app.component.html</context>
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
           <context context-type="linenumber">42</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="feedbackFormGreetingMessage" datatype="html">
+        <source> Leave you feedback, <x id="ICU" equiv-text="{user.gender, select, male {Mr.} female {Ms.}}"/> <x id="INTERPOLATION" equiv-text="{{ user.firstName }}"/> </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
+          <context context-type="linenumber">45,47</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="28eeb817309b258470864e42a3f9f116fadf853b" datatype="html">
+        <source>{VAR_SELECT, select, male {Mr.} female {Ms.}}</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
+          <context context-type="linenumber">46</context>
         </context-group>
       </trans-unit>
       <trans-unit id="submitButton" datatype="html">
         <source>Submit</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">apps/i18n/src/app/app.component.html</context>
-          <context context-type="linenumber">43</context>
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
+          <context context-type="linenumber">53</context>
         </context-group>
         <context-group purpose="location">
-          <context context-type="sourcefile">apps/i18n/src/app/app.component.html</context>
-          <context context-type="linenumber">48</context>
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
+          <context context-type="linenumber">69</context>
         </context-group>
       </trans-unit>
       <trans-unit id="contactUsFormTitle" datatype="html">
         <source>Contact us form</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">apps/i18n/src/app/app.component.html</context>
-          <context context-type="linenumber">47</context>
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
+          <context context-type="linenumber">57</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="messageFieldPlaceholder" datatype="html">
+        <source>Message</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.html</context>
+          <context context-type="linenumber">64</context>
         </context-group>
       </trans-unit>
       <trans-unit id="greetingMessage" datatype="html">
-        <source>Glad to see you again, <x id="PH" equiv-text="firstName"/> <x id="PH_1" equiv-text="lastName"/></source>
+        <source>Glad to see you again, <x id="PH" equiv-text="user.firstName"/> <x id="PH_1" equiv-text="user.lastName"/></source>
         <context-group purpose="location">
-          <context context-type="sourcefile">apps/i18n/src/app/app.component.ts</context>
-          <context context-type="linenumber">30</context>
+          <context context-type="sourcefile">apps/i18n-app/src/app/app.component.ts</context>
+          <context context-type="linenumber">31</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="userCardHeader" datatype="html">
+        <source>User card</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">libs/ui/src/lib/user-card/user-card.component.html</context>
+          <context context-type="linenumber">2</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="userFirstNameLabel" datatype="html">
+        <source>First name: <x id="INTERPOLATION" equiv-text="{{ user.firstName }}"/></source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">libs/ui/src/lib/user-card/user-card.component.html</context>
+          <context context-type="linenumber">3</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="userLastNameLabel" datatype="html">
+        <source>Last name: <x id="INTERPOLATION" equiv-text="{{ user.lastName }}"/></source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">libs/ui/src/lib/user-card/user-card.component.html</context>
+          <context context-type="linenumber">4</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="userEmailLabel" datatype="html">
+        <source>Email: <x id="INTERPOLATION" equiv-text="{{ user.email }}"/></source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">libs/ui/src/lib/user-card/user-card.component.html</context>
+          <context context-type="linenumber">5</context>
         </context-group>
       </trans-unit>
     </body>
